[project]
name = "postzen-sdk"
version = "2.0.0"
description = "Official Python SDK for the PostZen Public API - manage profiles, connected social accounts, media uploads, and post publishing"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PostZen" }]
keywords = ["postzen", "social media", "api", "sdk", "publishing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov",
    "respx>=0.21.0",
    "ruff",
    "mypy",
    "datamodel-code-generator>=0.26.0",
]

[project.urls]
Homepage = "https://postzen.dev"
Repository = "https://github.com/postzen-dev/postzen-python"
Documentation = "https://docs.postzen.dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/postzen"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "TCH", "PTH"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"src/postzen/models/_generated/*" = ["ARG", "I", "TCH", "UP", "W291"]
"src/postzen/resources/_generated/*" = ["ARG", "I", "TCH", "UP", "W291"]
"tests/*" = ["ARG001"]

[tool.ruff.lint.isort]
known-first-party = ["postzen"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "postzen.models._generated.*",
    "postzen.resources._generated.*",
]
ignore_errors = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
